fix(h2): add letter-spacing for h2-sm

--- a/benefits/static/css/styles.css
+++ b/benefits/static/css/styles.css
@@ -199,21 +199,22 @@ h2,
 }
 
 @media (max-width: 992px) {
-  /* H2 mobile sizing */
-  /* Only used on Landing Pages */
-  .h2-sm-p {
-    font-size: var(--bs-body-font-size);
-    font-weight: var(--bs-body-font-weight);
-    letter-spacing: calc(var(--bs-body-font-size) * var(--letter-spacing-5));
-    line-height: var(--heading-line-height);
-    margin: 0;
-  }
-
   /* H2: 20px, up to Small width */
   /* Only used on Help Pages */
   .h2-sm {
     font-size: var(--font-size-20px);
     line-height: var(--heading-line-height);
+    letter-spacing: calc(var(--font-size-20px) * var(--letter-spacing-5));
+  }
+
+  /* H2: 18px, up to Small width */
+  /* Only used on Landing Page, Eligibility Start */
+  .h2-sm-p {
+    font-size: var(--bs-body-font-size);
+    font-weight: var(--bs-body-font-weight);
+    line-height: var(--heading-line-height);
+    letter-spacing: calc(var(--bs-body-font-size) * var(--letter-spacing-5));
+    margin: 0;
   }
 }
 
